Added gradle init wrapper code in yml file

--- a/.github/workflows/WeatherBuild.yml
+++ b/.github/workflows/WeatherBuild.yml
@@ -19,6 +19,9 @@ jobs:
         java-version: '17'
         distribution: 'adopt'
 
+    - name: Init gradle wrapper
+      run: gradle wrapper
+
     - name: Change wrapper permissions
       run: chmod +x ./gradlew
 
