--- a/.github/workflows/WeatherBuild.yml
+++ b/.github/workflows/WeatherBuild.yml
@@ -26,7 +26,7 @@ jobs:
       run: chmod +x ./gradlew
 
     - name: Build with Gradle
-      run: /.gradlew build
+      run: gradle
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.3
